--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon backend/server/app.js -w backend/server -w src",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-express": "^0.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
